--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,8 +1,8 @@
 [tool.poetry]
 name = "WikiTicketCalendarMacro"
 version = "0.8.8"
-description = ""
-authors = ["Your Name <you@example.com>"]
+description = "Macro for the Trac Wiki to display Milestones and Tickets from the Ticketing system in a calendar view"
+authors = ["mcomb"]
 readme = "README.md"
 
 [tool.poetry.dependencies]
