Mise à jour du fichier de configuration

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,5 +12,5 @@ python = "^2.7"
 "WikiTicketCalendarMacro" = "WikiTicketCalendarMacro"
 
 [build-system]
-requires = ["poetry-core"]
+requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
